// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label render 1`] = `
<label
  className="label"
/>
`;

exports[`Label render custom classes 1`] = `
<label
  className="label test"
/>
`;

exports[`Label render disabled 1`] = `
<label
  className="label is-disabled"
/>
`;
